# GTFS-MCP-Chatbot

./: .gitignore  README.md  app.py  pyproject.toml
dbt/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
dbt/macros/: regexp_extract.sql
dbt/models/gtfs/: agency.sql  attributions.sql  calendar.sql  calendar_dates.sql  fare_attributes.sql  fare_rules.sql  feed_info.sql  frequencies.sql  make_sql_agency.sh  make_sql_attributions.sh  make_sql_calendar.sh  make_sql_calendar_dates.sh  make_sql_fare_attributes.sh  make_sql_fare_rules.sh  make_sql_feed_info.sh  make_sql_frequencies.sh  make_sql_routes.sh  make_sql_shapes.sh  make_sql_stop_times.sh  make_sql_stops.sh  make_sql_transfers.sh  make_sql_translations.sh  make_sql_trips.sh  routes.sql  schema.yml  shapes.sql  stop_times.sql  stops.sql  transfers.sql  translations.sql  trips.sql
dbt/models/row/: make_sql_agency_all.sh  make_sql_attributions_all.sh  make_sql_calendar_all.sh  make_sql_calendar_dates_all.sh  make_sql_fare_attributes_all.sh  make_sql_fare_rules_all.sh  make_sql_feed_info_all.sh  make_sql_routes_all.sh  (+22 more)
dbt/seeds/: gtfs.csv
examples/: few_shot.yaml  few_shot_viz.yaml  sample_questions.json  sample_questions_jp.json  sample_questions_with_parameters.json
gtfs/: cookbook.md
gtfs/sql/: 00_README.sql  10_service_days.sql  20_stop_times_norm.sql  30_departures.sql  40_trip_start_times.sql  50_route_patterns.sql  60_stop_areas.sql
prompts/: system_gtfs.md
utils/: block_renderer.py  event_renderer.py  exceptions.py  loading_animation.py  mcp_client.py  rag_examples.py  usage_renderer.py
