[project]
name = "gtfs-mcp-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "nagampere",email = "nagayohei0508@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic (>=0.75.0,<0.76.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "dbt-duckdb (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
